File: components/nexus-extender/src/test/java/org/sonatype/nexus/virtualthread/ThreadPinningAvoidanceTest.java